@@ -23,7 +23,7 @@
 - (IBAction)reset:(id)sender;
 - (IBAction)runCD:(id)sender;
 - (IBAction)runIso:(id)sender;
-- (IBAction)runExe:(id)sender;
+- (IBAction)runBios:(id)sender;
 - (IBAction)freeze:(id)sender;
 - (IBAction)defrost:(id)sender;
 - (IBAction)fullscreen:(id)sender;
